@@ -5,7 +5,6 @@ debug_level = <%= @debug_level %>
 <% end -%>
 debug_timestamps = <%= @debug_timestamps.to_s %>
 debug_microseconds = <%= @debug_microseconds.to_s %>
-try_inotify = <%= @try_inotify.to_s %>
 <% if @description -%>
 description = <%= @description %>
 <% end -%>
